fix [auto-width] on safari

--- a/io/ggl/styles.css
+++ b/io/ggl/styles.css
@@ -16,7 +16,7 @@
   h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 2em;
-    font-weight: 100;
+    font-weight: 300;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -46,7 +46,7 @@
   h1 {
     font-family: Arial, sans-serif;
     font-size: 2.8em;
-    font-weight: normal;
+    font-weight: 300;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -76,7 +76,7 @@
   h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 2.8em;
-    font-weight: 100;
+    font-weight: 300;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -106,7 +106,7 @@
   h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 3.6em;
-    font-weight: 100;
+    font-weight: 300;
     color: rgba(255,255,255,1);
     margin: 0;
     padding: 0;
